// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compliance Resolver Correctly Resolves Compliance List Query 1`] = `
Object {
  "data": Object {
    "compliances": Array [
      Object {
        "clusterCompliant": "0/3",
        "metadata": Object {
          "annotations": Object {
            "seed-generation": "1",
          },
          "name": "compliance-xz",
          "namespace": "mcm",
          "resourceVersion": "5533372",
          "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/compliance-xz",
        },
        "name": "compliance-xz",
        "namespace": "mcm",
        "placementBindings": Array [
          Object {
            "metadata": Object {
              "name": "binding-xz",
              "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/mcm/placementbindings/binding-xz",
            },
          },
        ],
        "placementPolicies": Array [
          Object {
            "metadata": Object {
              "name": "placement-xz",
              "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/mcm/placementpolicies/placement-xz",
            },
          },
        ],
        "policyCompliant": "0/3",
        "raw": Object {
          "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
          "kind": "Compliance",
          "metadata": Object {
            "annotations": Object {
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-01-02T19:42:12Z",
            "finalizers": Array [
              "finalizer.mcm.ibm.com",
            ],
            "generation": 1,
            "name": "compliance-xz",
            "namespace": "mcm",
            "resourceVersion": "5533372",
            "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/compliance-xz",
            "uid": "7fc1f4a2-0ec6-11e9-8fd0-0ebe277f4f9c",
          },
          "spec": Object {
            "runtime-rules": Array [
              Object {
                "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                "kind": "Policy",
                "metadata": Object {
                  "creationTimestamp": null,
                  "labels": Object {
                    "hipaa": "true",
                  },
                  "name": "policy-all",
                },
                "spec": Object {
                  "complianceType": "musthave",
                  "namespaces": Object {
                    "exclude": Array [
                      "kube*",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "object-templates": Array [
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "Pod",
                        "metadata": Object {
                          "name": "nginx",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "image": "nginx:1.7.9",
                              "name": "nginx",
                              "ports": Array [
                                Object {
                                  "containerPort": 80,
                                },
                              ],
                            },
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "Namespace",
                        "metadata": Object {
                          "labels": Object {
                            "name": "production",
                          },
                          "name": "production",
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "rbac.authorization.k8s.io/v1",
                        "kind": "RoleBinding",
                        "metadata": Object {
                          "name": "operate-pods-rolebinding",
                          "namespace": "default",
                        },
                        "roleRef": Object {
                          "apiGroup": "rbac.authorization.k8s.io",
                          "kind": "Role",
                          "name": "operator",
                        },
                        "subjects": Array [
                          Object {
                            "apiGroup": "rbac.authorization.k8s.io",
                            "kind": "User",
                            "name": "jane",
                          },
                        ],
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "policy/v1beta1",
                        "kind": "PodSecurityPolicy",
                        "metadata": Object {
                          "annotations": Object {
                            "seccomp.security.alpha.kubernetes.io/allowedProfileNames": "*",
                          },
                          "name": "privileged-mcm",
                        },
                        "spec": Object {
                          "allowPrivilegeEscalation": true,
                          "allowedCapabilities": Array [
                            "*",
                          ],
                          "fsGroup": Object {
                            "rule": "RunAsAny",
                          },
                          "hostIPC": true,
                          "hostNetwork": true,
                          "hostPID": true,
                          "hostPorts": Array [
                            Object {
                              "max": 65535,
                              "min": 0,
                            },
                          ],
                          "privileged": true,
                          "runAsUser": Object {
                            "rule": "RunAsAny",
                          },
                          "seLinux": Object {
                            "rule": "RunAsAny",
                          },
                          "supplementalGroups": Object {
                            "rule": "RunAsAny",
                          },
                          "volumes": Array [
                            "*",
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "networking.k8s.io/v1",
                        "kind": "NetworkPolicy",
                        "metadata": Object {
                          "name": "allow-all-mcm",
                        },
                        "spec": Object {
                          "ingress": Array [
                            Object {},
                          ],
                          "podSelector": Object {},
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "LimitRange",
                        "metadata": Object {
                          "name": "mem-limit-range",
                        },
                        "spec": Object {
                          "limits": Array [
                            Object {
                              "default": Object {
                                "memory": "512Mi",
                              },
                              "defaultRequest": Object {
                                "memory": "256Mi",
                              },
                              "type": "Container",
                            },
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                  ],
                  "remediationAction": "enforce",
                  "role-templates": Array [
                    Object {
                      "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                      "complianceType": "musthave",
                      "metadata": Object {
                        "creationTimestamp": null,
                        "name": "operator-role",
                      },
                      "rules": Array [
                        Object {
                          "complianceType": "musthave",
                          "policyRule": Object {
                            "apiGroups": Array [
                              "extensions",
                              "apps",
                            ],
                            "resources": Array [
                              "deployments",
                            ],
                            "verbs": Array [
                              "get",
                              "list",
                              "watch",
                              "create",
                              "delete",
                              "patch",
                            ],
                          },
                        },
                      ],
                      "selector": Object {
                        "matchLabels": Object {
                          "hipaa": "true",
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                  ],
                },
                "status": Object {},
              },
            ],
          },
          "status": Object {
            "placementBindings": Array [
              "binding-xz",
            ],
            "placementPolicies": Array [
              "placement-xz",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster1",
                "compliant": "Compliant",
              },
              "cluster2": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster2",
                "compliant": "Compliant",
              },
              "cluster3": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster3",
                "compliant": "Compliant",
              },
            },
          },
        },
        "remediation": "",
      },
    ],
  },
}
`;

exports[`Compliance Resolver Correctly Resolves Create Compliance Mutation 1`] = `
Object {
  "data": Object {
    "createCompliance": Array [
      Object {
        "kind": "Compliance",
        "metadata": Object {
          "creationTimestamp": "2018-09-06T18:19:43Z",
          "generation": 1,
          "name": "test-compliance",
          "namespace": "mcm",
          "resourceVersion": "4405693",
          "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/test-compliance",
          "uid": "6d5dbb6e-b201-11e8-9a12-005056a0d11b",
        },
        "spec": Object {
          "runtime-rules": Array [
            Object {
              "apiVersion": "policy.mcm.ibm.com/v1alpha1",
              "kind": "Policy",
              "metadata": Object {
                "description": "Instance descriptor for policy resource",
                "name": "test-policy-1",
              },
              "spec": Object {
                "namespaces": Object {
                  "exclude": Array [
                    "kube*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "inform",
                "role-templates": Array [
                  Object {
                    "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                    "complianceType": "musthave",
                    "kind": "RoleTemplate",
                    "metadata": Object {
                      "name": "role-xz-1",
                      "namespace": "",
                    },
                    "rules": Array [
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "extensions",
                            "apps",
                          ],
                          "resources": Array [
                            "deployments",
                          ],
                          "verbs": Array [
                            "get",
                            "list",
                            "watch",
                            "create",
                            "delete",
                            "patch",
                          ],
                        },
                        "complianceType": "musthave",
                      },
                    ],
                    "selector": Object {
                      "matchLabels": Object {
                        "cloud": "IBM",
                      },
                    },
                  },
                ],
              },
            },
            Object {
              "apiVersion": "policy.mcm.ibm.com/v1alpha1",
              "kind": "Policy",
              "metadata": Object {
                "description": "Instance descriptor for policy resource",
                "name": "test-policy-2",
              },
              "spec": Object {
                "namespaces": Object {
                  "exclude": Array [
                    "kube*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "enforce",
                "role-templates": Array [
                  Object {
                    "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                    "complianceType": "musthave",
                    "kind": "RoleTemplate",
                    "metadata": Object {
                      "name": "role-xz-2",
                      "namespace": "",
                    },
                    "rules": Array [
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "extensions",
                            "apps",
                          ],
                          "resources": Array [
                            "deployments",
                          ],
                          "verbs": Array [
                            "get",
                            "list",
                            "watch",
                            "delete",
                          ],
                        },
                        "complianceType": "musthave",
                      },
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "core",
                          ],
                          "resources": Array [
                            "pods",
                          ],
                          "verbs": Array [
                            "create",
                            "update",
                            "patch",
                          ],
                        },
                        "complianceType": "mustnothave",
                      },
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "core",
                          ],
                          "resources": Array [
                            "secrets",
                          ],
                          "verbs": Array [
                            "get",
                            "watch",
                            "list",
                            "create",
                            "delete",
                            "update",
                            "patch",
                          ],
                        },
                      },
                    ],
                    "selector": Object {
                      "matchLabels": Object {
                        "cloud": "IBM",
                      },
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Compliance Resolver Correctly Resolves Single Compliance Query 1`] = `
Object {
  "data": Object {
    "compliances": Array [
      Object {
        "clusterCompliant": "0/0",
        "compliancePolicies": Array [
          Object {
            "clusterCompliant": null,
            "clusterNotCompliant": null,
            "complianceName": "test-compliance",
            "complianceNamespace": "mcm",
            "name": "test-policy-1",
            "policies": null,
          },
          Object {
            "clusterCompliant": null,
            "clusterNotCompliant": null,
            "complianceName": "test-compliance",
            "complianceNamespace": "mcm",
            "name": "test-policy-2",
            "policies": null,
          },
        ],
        "compliancePolicy": Array [
          Object {
            "complianceName": "test-compliance",
            "complianceNamespace": "mcm",
            "complianceSelfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/test-compliance",
            "detail": Object {
              "exclude_namespace": Array [
                "kube*",
              ],
              "include_namespace": Array [
                "default",
              ],
            },
            "name": "test-policy-1",
            "objectTemplates": Array [],
            "raw": Object {
              "apiVersion": "policy.mcm.ibm.com/v1alpha1",
              "kind": "Policy",
              "metadata": Object {
                "description": "Instance descriptor for policy resource",
                "name": "test-policy-1",
              },
              "spec": Object {
                "namespaces": Object {
                  "exclude": Array [
                    "kube*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "inform",
                "role-templates": Array [
                  Object {
                    "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                    "complianceType": "musthave",
                    "kind": "RoleTemplate",
                    "metadata": Object {
                      "name": "role-xz-1",
                      "namespace": "",
                    },
                    "rules": Array [
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "extensions",
                            "apps",
                          ],
                          "resources": Array [
                            "deployments",
                          ],
                          "verbs": Array [
                            "get",
                            "list",
                            "watch",
                            "create",
                            "delete",
                            "patch",
                          ],
                        },
                        "complianceType": "musthave",
                      },
                    ],
                    "selector": Object {
                      "matchLabels": Object {
                        "cloud": "IBM",
                      },
                    },
                  },
                ],
              },
            },
            "roleBindingTemplates": Array [],
            "roleTemplates": Array [
              Object {
                "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                "complianceType": "musthave",
                "compliant": "",
                "kind": null,
                "lastTransition": "",
                "name": "role-xz-1",
                "raw": Object {
                  "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                  "complianceType": "musthave",
                  "kind": "RoleTemplate",
                  "metadata": Object {
                    "name": "role-xz-1",
                    "namespace": "",
                  },
                  "rules": Array [
                    Object {
                      "PolicyRule": Object {
                        "apiGroups": Array [
                          "extensions",
                          "apps",
                        ],
                        "resources": Array [
                          "deployments",
                        ],
                        "verbs": Array [
                          "get",
                          "list",
                          "watch",
                          "create",
                          "delete",
                          "patch",
                        ],
                      },
                      "complianceType": "musthave",
                    },
                  ],
                  "selector": Object {
                    "matchLabels": Object {
                      "cloud": "IBM",
                    },
                  },
                  "templateType": "role-templates",
                },
                "validity": "",
              },
            ],
            "status": null,
          },
          Object {
            "complianceName": "test-compliance",
            "complianceNamespace": "mcm",
            "complianceSelfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/test-compliance",
            "detail": Object {
              "exclude_namespace": Array [
                "kube*",
              ],
              "include_namespace": Array [
                "default",
              ],
            },
            "name": "test-policy-2",
            "objectTemplates": Array [],
            "raw": Object {
              "apiVersion": "policy.mcm.ibm.com/v1alpha1",
              "kind": "Policy",
              "metadata": Object {
                "description": "Instance descriptor for policy resource",
                "name": "test-policy-2",
              },
              "spec": Object {
                "namespaces": Object {
                  "exclude": Array [
                    "kube*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "enforce",
                "role-templates": Array [
                  Object {
                    "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                    "complianceType": "musthave",
                    "kind": "RoleTemplate",
                    "metadata": Object {
                      "name": "role-xz-2",
                      "namespace": "",
                    },
                    "rules": Array [
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "extensions",
                            "apps",
                          ],
                          "resources": Array [
                            "deployments",
                          ],
                          "verbs": Array [
                            "get",
                            "list",
                            "watch",
                            "delete",
                          ],
                        },
                        "complianceType": "musthave",
                      },
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "core",
                          ],
                          "resources": Array [
                            "pods",
                          ],
                          "verbs": Array [
                            "create",
                            "update",
                            "patch",
                          ],
                        },
                        "complianceType": "mustnothave",
                      },
                      Object {
                        "PolicyRule": Object {
                          "apiGroups": Array [
                            "core",
                          ],
                          "resources": Array [
                            "secrets",
                          ],
                          "verbs": Array [
                            "get",
                            "watch",
                            "list",
                            "create",
                            "delete",
                            "update",
                            "patch",
                          ],
                        },
                      },
                    ],
                    "selector": Object {
                      "matchLabels": Object {
                        "cloud": "IBM",
                      },
                    },
                  },
                ],
              },
            },
            "roleBindingTemplates": Array [],
            "roleTemplates": Array [
              Object {
                "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                "complianceType": "musthave",
                "compliant": "",
                "kind": null,
                "lastTransition": "",
                "name": "role-xz-2",
                "raw": Object {
                  "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                  "complianceType": "musthave",
                  "kind": "RoleTemplate",
                  "metadata": Object {
                    "name": "role-xz-2",
                    "namespace": "",
                  },
                  "rules": Array [
                    Object {
                      "PolicyRule": Object {
                        "apiGroups": Array [
                          "extensions",
                          "apps",
                        ],
                        "resources": Array [
                          "deployments",
                        ],
                        "verbs": Array [
                          "get",
                          "list",
                          "watch",
                          "delete",
                        ],
                      },
                      "complianceType": "musthave",
                    },
                    Object {
                      "PolicyRule": Object {
                        "apiGroups": Array [
                          "core",
                        ],
                        "resources": Array [
                          "pods",
                        ],
                        "verbs": Array [
                          "create",
                          "update",
                          "patch",
                        ],
                      },
                      "complianceType": "mustnothave",
                    },
                    Object {
                      "PolicyRule": Object {
                        "apiGroups": Array [
                          "core",
                        ],
                        "resources": Array [
                          "secrets",
                        ],
                        "verbs": Array [
                          "get",
                          "watch",
                          "list",
                          "create",
                          "delete",
                          "update",
                          "patch",
                        ],
                      },
                    },
                  ],
                  "selector": Object {
                    "matchLabels": Object {
                      "cloud": "IBM",
                    },
                  },
                  "templateType": "role-templates",
                },
                "validity": "",
              },
            ],
            "status": null,
          },
        ],
        "complianceStatus": Array [],
        "metadata": Object {
          "creationTimestamp": "2018-09-06T18:19:43Z",
          "name": "test-compliance",
          "namespace": "mcm",
          "resourceVersion": "4405693",
          "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/test-compliance",
          "uid": "6d5dbb6e-b201-11e8-9a12-005056a0d11b",
        },
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {
          "kind": "Compliance",
          "metadata": Object {
            "creationTimestamp": "2018-09-06T18:19:43Z",
            "generation": 1,
            "name": "test-compliance",
            "namespace": "mcm",
            "resourceVersion": "4405693",
            "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/test-compliance",
            "uid": "6d5dbb6e-b201-11e8-9a12-005056a0d11b",
          },
          "spec": Object {
            "runtime-rules": Array [
              Object {
                "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                "kind": "Policy",
                "metadata": Object {
                  "description": "Instance descriptor for policy resource",
                  "name": "test-policy-1",
                },
                "spec": Object {
                  "namespaces": Object {
                    "exclude": Array [
                      "kube*",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "remediationAction": "inform",
                  "role-templates": Array [
                    Object {
                      "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                      "complianceType": "musthave",
                      "kind": "RoleTemplate",
                      "metadata": Object {
                        "name": "role-xz-1",
                        "namespace": "",
                      },
                      "rules": Array [
                        Object {
                          "PolicyRule": Object {
                            "apiGroups": Array [
                              "extensions",
                              "apps",
                            ],
                            "resources": Array [
                              "deployments",
                            ],
                            "verbs": Array [
                              "get",
                              "list",
                              "watch",
                              "create",
                              "delete",
                              "patch",
                            ],
                          },
                          "complianceType": "musthave",
                        },
                      ],
                      "selector": Object {
                        "matchLabels": Object {
                          "cloud": "IBM",
                        },
                      },
                    },
                  ],
                },
              },
              Object {
                "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                "kind": "Policy",
                "metadata": Object {
                  "description": "Instance descriptor for policy resource",
                  "name": "test-policy-2",
                },
                "spec": Object {
                  "namespaces": Object {
                    "exclude": Array [
                      "kube*",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "remediationAction": "enforce",
                  "role-templates": Array [
                    Object {
                      "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                      "complianceType": "musthave",
                      "kind": "RoleTemplate",
                      "metadata": Object {
                        "name": "role-xz-2",
                        "namespace": "",
                      },
                      "rules": Array [
                        Object {
                          "PolicyRule": Object {
                            "apiGroups": Array [
                              "extensions",
                              "apps",
                            ],
                            "resources": Array [
                              "deployments",
                            ],
                            "verbs": Array [
                              "get",
                              "list",
                              "watch",
                              "delete",
                            ],
                          },
                          "complianceType": "musthave",
                        },
                        Object {
                          "PolicyRule": Object {
                            "apiGroups": Array [
                              "core",
                            ],
                            "resources": Array [
                              "pods",
                            ],
                            "verbs": Array [
                              "create",
                              "update",
                              "patch",
                            ],
                          },
                          "complianceType": "mustnothave",
                        },
                        Object {
                          "PolicyRule": Object {
                            "apiGroups": Array [
                              "core",
                            ],
                            "resources": Array [
                              "secrets",
                            ],
                            "verbs": Array [
                              "get",
                              "watch",
                              "list",
                              "create",
                              "delete",
                              "update",
                              "patch",
                            ],
                          },
                        },
                      ],
                      "selector": Object {
                        "matchLabels": Object {
                          "cloud": "IBM",
                        },
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      Object {
        "clusterCompliant": "0/0",
        "compliancePolicies": Array [],
        "compliancePolicy": Array [
          Object {
            "complianceName": "policy-xz-1",
            "complianceNamespace": "mycluster",
            "complianceSelfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
            "detail": Object {
              "exclude_namespace": Array [
                "kube*",
              ],
              "include_namespace": Array [
                "default",
              ],
            },
            "name": "policy-xz-1",
            "objectTemplates": Array [],
            "raw": Object {
              "apiVersion": "policy.mcm.ibm.com/v1alpha1",
              "clusters": Array [],
              "kind": "Policy",
              "metadata": Object {
                "creationTimestamp": "2018-09-04T16:13:50Z",
                "finalizers": Array [
                  "finalizer.mcm.ibm.com",
                ],
                "generation": 1,
                "labels": Object {
                  "compliance": "compliance-xz",
                },
                "name": "policy-xz-1",
                "namespace": "mycluster",
                "ownerReferences": Array [
                  Object {
                    "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
                    "blockOwnerDeletion": true,
                    "controller": true,
                    "kind": "Compliance",
                    "name": "compliance-xz",
                    "uid": "82de70e7-b05d-11e8-9a12-005056a0d11b",
                  },
                ],
                "resourceVersion": "4349995",
                "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
                "uid": "82e00acc-b05d-11e8-9a12-005056a0d11b",
              },
              "name": "policy-xz-1",
              "namespace": "mycluster",
              "raw": Object {
                "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                "kind": "Policy",
                "metadata": Object {
                  "creationTimestamp": "2018-09-04T16:13:50Z",
                  "finalizers": Array [
                    "finalizer.mcm.ibm.com",
                  ],
                  "generation": 1,
                  "labels": Object {
                    "compliance": "compliance-xz",
                  },
                  "name": "policy-xz-1",
                  "namespace": "mycluster",
                  "ownerReferences": Array [
                    Object {
                      "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
                      "blockOwnerDeletion": true,
                      "controller": true,
                      "kind": "Compliance",
                      "name": "compliance-xz",
                      "uid": "82de70e7-b05d-11e8-9a12-005056a0d11b",
                    },
                  ],
                  "resourceVersion": "4349995",
                  "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
                  "uid": "82e00acc-b05d-11e8-9a12-005056a0d11b",
                },
                "spec": Object {
                  "complianceType": "",
                  "namespaces": Object {
                    "exclude": Array [
                      "kube*",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "remediationAction": "inform",
                  "role-templates": Array [
                    Object {
                      "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                      "complianceType": "musthave",
                      "kind": "RoleTemplate",
                      "metadata": Object {
                        "creationTimestamp": null,
                        "name": "role-xz-1",
                      },
                      "rules": Array [
                        Object {
                          "complianceType": "musthave",
                          "policyRule": Object {
                            "apiGroups": Array [
                              "extensions",
                              "apps",
                            ],
                            "resources": Array [
                              "deployments",
                            ],
                            "verbs": Array [
                              "get",
                              "list",
                              "watch",
                              "create",
                              "delete",
                              "patch",
                            ],
                          },
                        },
                      ],
                      "selector": Object {
                        "matchLabels": Object {
                          "cloud": "IBM",
                        },
                      },
                      "status": Object {
                        "Compliant": "NonCompliant",
                        "Validity": Object {
                          "valid": true,
                        },
                        "conditions": Array [
                          Object {
                            "lastTransitionTime": "2018-09-06T15:14:44Z",
                            "message": "k8s RBAC role is missing: role-xz-1",
                            "reason": "K8s RBAC role is missing",
                            "status": "True",
                            "type": "completed",
                          },
                        ],
                      },
                    },
                  ],
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Valid": true,
                },
              },
              "remediation": "inform",
              "spec": Object {
                "complianceType": "",
                "namespaces": Object {
                  "exclude": Array [
                    "kube*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "inform",
                "role-templates": Array [
                  Object {
                    "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                    "complianceType": "musthave",
                    "kind": "RoleTemplate",
                    "metadata": Object {
                      "creationTimestamp": null,
                      "name": "role-xz-1",
                    },
                    "rules": Array [
                      Object {
                        "complianceType": "musthave",
                        "policyRule": Object {
                          "apiGroups": Array [
                            "extensions",
                            "apps",
                          ],
                          "resources": Array [
                            "deployments",
                          ],
                          "verbs": Array [
                            "get",
                            "list",
                            "watch",
                            "create",
                            "delete",
                            "patch",
                          ],
                        },
                      },
                    ],
                    "selector": Object {
                      "matchLabels": Object {
                        "cloud": "IBM",
                      },
                    },
                    "status": Object {
                      "Compliant": "NonCompliant",
                      "Validity": Object {
                        "valid": true,
                      },
                      "conditions": Array [
                        Object {
                          "lastTransitionTime": "2018-09-06T15:14:44Z",
                          "message": "k8s RBAC role is missing: role-xz-1",
                          "reason": "K8s RBAC role is missing",
                          "status": "True",
                          "type": "completed",
                        },
                      ],
                    },
                  },
                ],
              },
              "status": Object {
                "Compliant": "NonCompliant",
                "Valid": true,
              },
            },
            "roleBindingTemplates": Array [],
            "roleTemplates": Array [
              Object {
                "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                "complianceType": "musthave",
                "compliant": "NonCompliant",
                "kind": null,
                "lastTransition": "2018-09-06T15:14:44Z",
                "name": "role-xz-1",
                "raw": Object {
                  "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                  "complianceType": "musthave",
                  "kind": "RoleTemplate",
                  "metadata": Object {
                    "creationTimestamp": null,
                    "name": "role-xz-1",
                  },
                  "rules": Array [
                    Object {
                      "complianceType": "musthave",
                      "policyRule": Object {
                        "apiGroups": Array [
                          "extensions",
                          "apps",
                        ],
                        "resources": Array [
                          "deployments",
                        ],
                        "verbs": Array [
                          "get",
                          "list",
                          "watch",
                          "create",
                          "delete",
                          "patch",
                        ],
                      },
                    },
                  ],
                  "selector": Object {
                    "matchLabels": Object {
                      "cloud": "IBM",
                    },
                  },
                  "status": Object {
                    "Compliant": "NonCompliant",
                    "Validity": Object {
                      "valid": true,
                    },
                    "conditions": Array [
                      Object {
                        "lastTransitionTime": "2018-09-06T15:14:44Z",
                        "message": "k8s RBAC role is missing: role-xz-1",
                        "reason": "K8s RBAC role is missing",
                        "status": "True",
                        "type": "completed",
                      },
                    ],
                  },
                  "templateType": "role-templates",
                },
                "validity": "true",
              },
            ],
            "status": null,
          },
        ],
        "complianceStatus": Array [],
        "metadata": Object {
          "creationTimestamp": "2018-09-04T16:13:50Z",
          "name": "policy-xz-1",
          "namespace": "mycluster",
          "resourceVersion": "4349995",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
          "uid": "82e00acc-b05d-11e8-9a12-005056a0d11b",
        },
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "creationTimestamp": "2018-09-04T16:13:50Z",
            "finalizers": Array [
              "finalizer.mcm.ibm.com",
            ],
            "generation": 1,
            "labels": Object {
              "compliance": "compliance-xz",
            },
            "name": "policy-xz-1",
            "namespace": "mycluster",
            "ownerReferences": Array [
              Object {
                "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
                "blockOwnerDeletion": true,
                "controller": true,
                "kind": "Compliance",
                "name": "compliance-xz",
                "uid": "82de70e7-b05d-11e8-9a12-005056a0d11b",
              },
            ],
            "resourceVersion": "4349995",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
            "uid": "82e00acc-b05d-11e8-9a12-005056a0d11b",
          },
          "spec": Object {
            "complianceType": "",
            "namespaces": Object {
              "exclude": Array [
                "kube*",
              ],
              "include": Array [
                "default",
              ],
            },
            "remediationAction": "inform",
            "role-templates": Array [
              Object {
                "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                "complianceType": "musthave",
                "kind": "RoleTemplate",
                "metadata": Object {
                  "creationTimestamp": null,
                  "name": "role-xz-1",
                },
                "rules": Array [
                  Object {
                    "complianceType": "musthave",
                    "policyRule": Object {
                      "apiGroups": Array [
                        "extensions",
                        "apps",
                      ],
                      "resources": Array [
                        "deployments",
                      ],
                      "verbs": Array [
                        "get",
                        "list",
                        "watch",
                        "create",
                        "delete",
                        "patch",
                      ],
                    },
                  },
                ],
                "selector": Object {
                  "matchLabels": Object {
                    "cloud": "IBM",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {
                    "valid": true,
                  },
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2018-09-06T15:14:44Z",
                      "message": "k8s RBAC role is missing: role-xz-1",
                      "reason": "K8s RBAC role is missing",
                      "status": "True",
                      "type": "completed",
                    },
                  ],
                },
              },
            ],
          },
          "status": Object {
            "Compliant": "NonCompliant",
            "Valid": true,
          },
        },
      },
    ],
  },
}
`;
